src/main/resources/Krakatau-master/tests/assembler/bad/adjacentframes.j
.class adjacentframes
.super java/lang/Object
.method public static main : ([Ljava/lang/String;)V
    .code stack 2 locals 1
        .stack full
            locals
            stack
        .end stack
        .stack same
L1:     return
L2:
    .end code
.end method
.end class
